Fixed up the header spacing and the alignment on the landing page hero

--- a/sarahhkeast_portfolio/src/styles/components/header.scss
+++ b/sarahhkeast_portfolio/src/styles/components/header.scss
@@ -20,10 +20,14 @@
     &__text-container {
         padding-top: 56px;
         padding-bottom: 32px;
-        width: 50%;
+        width: 12.5%;
+        margin-left: 12.5%;
         display: flex;
         align-items: center;
-        justify-content: space-evenly;
+        justify-content: space-between;
+        @media (max-width: $breakpoint-desktop) {
+            width: 20%;
+        }
         @media (max-width: $breakpoint-tablet) {
             display: none;
         }
@@ -61,7 +65,10 @@
     }
     
     &__space-container {
-        width: 50%;
+        width: 70%;
+        @media (max-width: $breakpoint-desktop) {
+            width: 62.5%;
+        }
         @media (max-width: $breakpoint-tablet) {
             display: none;
         }
